--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,16 +1,192 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: ""
 permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .container {display: flex; align-items: center; margin-bottom: 20px;}
+    .photo img {width: 180px; height: 240px; object-fit: cover; margin-right: 30px;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+<h2>Principal Investigator</h2>
+  <hr>  <!-- 添加的横线 -->
+  <div class="container">
+    <div class="photo">
+      <img src="../images/张洪溢.jpg" alt="Zhang Hongyi Photo">
+    </div>
+    <div class="info">
+      <h2>张洪溢 教授 博士生导师</h2>
+      <p><span class="label">研究方向:</span> 肿瘤免疫基因组学、机器学习算法开发</p>
+      <p><span class="label">学术荣誉:</span> 国家杰出青年基金、Nature Cancer年度突破奖</p>
+      <p><span class="label">Email:</span> hongyiz9@uestc.edu.cn</p>
+    </div>
+  </div>
+  <div class="bio">
+    <p><span class="label">简介:</span> 张洪溢，博士生导师，电子科技大学医学院/四川省医学科学院·四川省人民医院双聘教授。国家级青年人才计划入选者。2018年于哈尔滨医科大学获得博士学位，2019-2023年在美国西南医学中心从事博士后研究，2023年-2024年在宾夕法尼亚大学/费城儿童医院以高级研究员(senior research scientist)身份从事科研工作。2025年初回国加入电子科技大学医学院与四川省人民医院。近五年来，以第一/通讯作者（含共同）在Cancer Cell，Nature Cancer，Nature Communications，Nucleic Acids Research, Clinical Cancer Research等国际主流期刊发表了一系列成果。实验室致力于计算肿瘤免疫信息学研究，重点关注肿瘤微环境中免疫细胞的代谢失调，以及T/B细胞受体（TCR与BCR）谱系变化对肿瘤进展与治疗应答的影响。通过多组学数据整合分析并开发相应的生物信息学算法解决领域内的焦点问题。</p>
+  </div>
+</body>
+</html>
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
-{% endif %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .container {display: flex; align-items: center; margin-bottom: 20px;}
+    .photo img {width: 180px; height: 240px; object-fit: cover; margin-right: 30px;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+<h2>课题成员</h2>
+  <hr>  <!-- 添加的横线 -->
+  <div class="container">
+    <div class="photo">
+      <img src="../images/于雪新.jpg" alt="Zhang Hongyi Photo">
+    </div>
+    <div class="info">
+      <h2>于雪新 特聘研究员</h2>
+      <p><span class="label">研究方向:</span> 计算肿瘤免疫信息学</p>
+      <p><span class="label">学术荣誉:</span> 电子科技大学百人计划青年项目</p>
+      <p><span class="label">Email:</span> XXXX</p>
+    </div>
+  </div>
+  <div class="bio">
+    <p><span class="label">简介:</span> 于雪新博士，2017年博士毕业于哈尔滨医科大学生物信息科学与技术学院，聚焦于肿瘤癌前病变和微环境的相关研究。2017年-2019年就职于国家生物信息中心任助理研究员。2019年-2024年底，先后于美国西南医学中心和宾夕法尼亚大学，跟随李博教授从事博士后研究，主要研究方向为计算肿瘤免疫信息学。2024年入选电子科技大学百人计划青年项目，2025年3月全职加入电子科技大学医学院，双聘于电子科技大学附属四川省人民医院，任特聘研究员。近五年，以第一作者（含共同）身份在Cancer Cell、Cell Reports Medicine、BMC Medicine和Nature Communications等杂志发表论文12篇。目前开展的研究方向包括，整合多组学数据，通过开发算法解析肿瘤免疫微环境的异质性及时空特异性、识别可用于肿瘤早期诊断的免疫相关标志物，为肿瘤新免疫治疗策略的开发以及新靶点的识别提供技术手段和技术支撑。</p>
+  </div>
+</body>
+</html>
 
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .container {display: flex; align-items: center; margin-bottom: 20px;}
+    .photo img {width: 180px; height: 240px; object-fit: cover; margin-right: 30px;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="photo">
+      <img src="../images/魏甜甜.jpg" alt="Zhang Hongyi Photo">
+    </div>
+    <div class="info">
+      <h2>魏甜甜 博士</h2>
+      <p><span class="label">研究方向:</span> 空间转录组、单细胞测序</p>
+      <p><span class="label">Email:</span> harbin_emma@163.com</p>
+    </div>
+  </div>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .container {display: flex; align-items: center; margin-bottom: 20px;}
+    .photo img {width: 180px; height: 240px; object-fit: cover; margin-right: 30px;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="photo">
+      <img src="../images/彭癸森.jpg" alt="Zhang Hongyi Photo">
+    </div>
+    <div class="info">
+      <h2>彭癸森 博士</h2>
+      <p><span class="label">研究方向:</span> XXX</p>
+      <p><span class="label">Email:</span> XXX</p>
+    </div>
+  </div>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .container {display: flex; align-items: center; margin-bottom: 20px;}
+    .photo img {width: 180px; height: 240px; object-fit: cover; margin-right: 30px;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="photo">
+      <img src="../images/宋杨.jpg" alt="Zhang Hongyi Photo">
+    </div>
+    <div class="info">
+      <h2>宋扬 科研助理</h2>
+      <p><span class="label">研究方向:</span> 三代测序</p>
+      <p><span class="label">Email:</span> XXX</p>
+    </div>
+  </div>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .container {display: flex; align-items: center; margin-bottom: 20px;}
+    .photo img {width: 180px; height: 240px; object-fit: cover; margin-right: 30px;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="photo">
+      <img src="../images/许远东.jpg" alt="Zhang Hongyi Photo">
+    </div>
+    <div class="info">
+      <h2>许远东 科研助理</h2>
+      <p><span class="label">研究方向:</span> 深度学习</p>
+      <p><span class="label">Email:</span> 2270687427xuyd@gmail.com</p>
+    </div>
+  </div>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .container {display: flex; align-items: center; margin-bottom: 20px;}
+    .photo img {width: 180px; height: 240px; object-fit: cover; margin-right: 30px;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="photo">
+      <img src="../images/陈泓羽.jpg" alt="Zhang Hongyi Photo">
+    </div>
+    <div class="info">
+      <h2>陈泓羽 行政助理</h2>
+      <p><span class="label">研究方向:</span> 实验</p>
+      <p><span class="label">Email:</span> XXX</p>
+    </div>
+  </div>
+</body>
+</html>
