--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,83 @@
 ---
 layout: archive
-title: "Teaching"
+title: ""
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .profile-container {display: flex; 
+                        align-items: flex-start;
+                        gap: 30px;
+                        margin-bottom: 20px;}
+    .photo-container {flex: 0 0 180px;}
+    .photo-container img {width: 180px;
+                          height: 240px;
+                          object-fit: cover;}
+    .info-container {flex: 1;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+<h2>工具名字缩写1</h2>
+<p>工具名字全称1</p>
+<hr>
+<div class="profile-container">
+  <!-- 左侧照片区域 -->
+  <div class="photo-container">
+    <img src="../images/陈泓羽.jpg" alt="个人照片">
+  </div>
+  <!-- 右侧信息区域 -->
+  <div class="info-container">
+    <div class="bio">
+      <p><span class="label">简介:</span> 张洪溢，博士生导师，电子科技大学医学院/四川省医学科学院·四川省人民医院双聘教授。国家级青年人才计划入选者。2018年于哈尔滨医科大学获得博士学位，2019-2023年在美国西南医学中心从事博士后研究，2023年-2024年在宾夕法尼亚大学/费城儿童医院以高级研究员(senior research scientist)身份从事科研工作。2025年初回国加入电子科技大学医学院与四川省人民医院。近五年来，以第一/通讯作者（含共同）在Cancer Cell，Nature Cancer，Nature Communications，Nucleic Acids Research, Clinical Cancer Research等国际主流期刊发表了一系列成果。实验室致力于计算肿瘤免疫信息学研究，重点关注肿瘤微环境中免疫细胞的代谢失调，以及T/B细胞受体（TCR与BCR）谱系变化对肿瘤进展与治疗应答的影响。通过多组学数据整合分析并开发相应的生物信息学算法解决领域内的焦点问题。</p>
+    </div>
+  </div>
+</div>
+</body>
+</html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    .profile-container {display: flex; 
+                        align-items: flex-start;
+                        gap: 30px;
+                        margin-bottom: 20px;}
+    .photo-container {flex: 0 0 180px;}
+    .photo-container img {width: 180px;
+                          height: 240px;
+                          object-fit: cover;}
+    .info-container {flex: 1;}
+    .label {font-weight: bold;}
+    .bio {margin-top: 20px;}
+  </style>
+</head>
+<body>
+<h2>工具名字缩写2</h2>
+<p>工具名字全称2<p>
+<hr>
+<div class="profile-container">
+  <!-- 左侧照片区域 -->
+  <div class="photo-container">
+    <img src="../images/魏甜甜.jpg" alt="个人照片">
+  </div>
+  <!-- 右侧信息区域 -->
+  <div class="info-container">
+    <div class="bio">
+      <p><span class="label">简介:</span> 张洪溢，博士生导师，电子科技大学医学院/四川省医学科学院·四川省人民医院双聘教授。国家级青年人才计划入选者。2018年于哈尔滨医科大学获得博士学位，2019-2023年在美国西南医学中心从事博士后研究，2023年-2024年在宾夕法尼亚大学/费城儿童医院以高级研究员(senior research scientist)身份从事科研工作。2025年初回国加入电子科技大学医学院与四川省人民医院。近五年来，以第一/通讯作者（含共同）在Cancer Cell，Nature Cancer，Nature Communications，Nucleic Acids Research, Clinical Cancer Research等国际主流期刊发表了一系列成果。实验室致力于计算肿瘤免疫信息学研究，重点关注肿瘤微环境中免疫细胞的代谢失调，以及T/B细胞受体（TCR与BCR）谱系变化对肿瘤进展与治疗应答的影响。通过多组学数据整合分析并开发相应的生物信息学算法解决领域内的焦点问题。</p>
+    </div>
+  </div>
+</div>
+</body>
+</html>
+
+
+      
