--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -133,7 +133,7 @@ author_profile: true
       <img src="../images/宋杨.jpg" alt="Zhang Hongyi Photo">
     </div>
     <div class="info">
-      <h2>宋扬 科研助理</h2>
+      <h2>宋杨 科研助理</h2>
       <p><span class="label">研究方向:</span> 三代测序</p>
       <p><span class="label">Email:</span> XXX</p>
     </div>
