--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -19,7 +19,7 @@ redirect_from:
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
         }
         
         h1 {
