--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -59,13 +59,13 @@ redirect_from:
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const images = [
-            { src: "/images/ZhangLab-Photo/于雪新.jpg", title: "于雪新" },
-            { src: "/images/ZhangLab-Photo/张洪溢.jpg", title: "张洪溢" },
-            { src: "/images/ZhangLab-Photo/陈泓羽.jpg", title: "陈泓羽" },
-            { src: "/images/ZhangLab-Photo/彭癸森.jpg", title: "彭癸森" },
-            { src: "/images/ZhangLab-Photo/宋杨.jpg", title: "宋杨" },
-            { src: "/images/ZhangLab-Photo/魏甜甜.jpg", title: "魏甜甜" },
-            { src: "/images/ZhangLab-Photo/许远东.jpg", title: "许远东" }
+            { src: "/images/ZhangLab-Photo/于雪新.jpg"},
+            { src: "/images/ZhangLab-Photo/张洪溢.jpg"},
+            { src: "/images/ZhangLab-Photo/陈泓羽.jpg"},
+            { src: "/images/ZhangLab-Photo/彭癸森.jpg"},
+            { src: "/images/ZhangLab-Photo/宋杨.jpg"},
+            { src: "/images/ZhangLab-Photo/魏甜甜.jpg"},
+            { src: "/images/ZhangLab-Photo/许远东.jpg"}
         ];
 
         const gallery = document.getElementById('gallery');
